--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,16 @@ excludes=
 file.reference.flatlaf-3.4.1.jar=lib\\flatlaf-3.4.1.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
+file.reference.mysql-connector-j-8.3.0.jar=lib\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-java-5.1.46.jar=lib\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.4.1.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
