--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Super_express
 excludes=
 file.reference.flatlaf-3.4.1.jar=lib\\flatlaf-3.4.1.jar
+file.reference.javax-inject.jar=lib\\javax-inject.jar
+file.reference.javax.activation-1.1.0.v201105071233.jar=lib\\javax.activation-1.1.0.v201105071233.jar
+file.reference.javax.ejb.jar=lib\\javax.ejb.jar
+file.reference.javax.faces-api-2.0.jar=lib\\javax.faces-api-2.0.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
+file.reference.mail.jar=lib\\mail.jar
 file.reference.mysql-connector-j-8.3.0.jar=lib\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-java-5.1.46.jar=lib\\mysql-connector-java-5.1.46.jar
 includes=**
@@ -45,7 +50,12 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.javax-inject.jar}:\
+    ${file.reference.javax.activation-1.1.0.v201105071233.jar}:\
+    ${file.reference.javax.ejb.jar}:\
+    ${file.reference.javax.faces-api-2.0.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
